MB-51256 - layout issues with datatable in query workbench
There were two problems here:

1) In Angular the datatable component needs to be inside a div with
position: absolute, a specified width, and a fixed height. This wasn't
true in AngularJS (as can be seen in the Analytics UI), but we added a
style to the css to cover this for the query workbench.

2) There was an off-by-one error in the datatable when computing the
height for arrays. This caused the vertical overlap in the results
reported in the issue. In fact, with data containing top-level arrays,
it was off by much more. Added a short code block to sum heights
properly for arrays.

Reviewed-on: https://review.couchbase.org/c/query-ui/+/171700
Tested-by: Eben Haber <eben@couchbase.com>

--- a/query-ui/ui-current/query.css
+++ b/query-ui/ui-current/query.css
@@ -37,6 +37,12 @@
   width: 100%;
 }
 
+/* div around the datatable needs absolute positioning and fixed height for scrolling to work */
+.data-table-parent {
+  position: absolute;
+  height: calc(100vh - 360px); /* must be same height as wb-results-wrapper in cbui-components.css */
+}
+
 .doc-editor-fieldset {
     padding: 0;
     border: 0;
@@ -305,8 +311,12 @@ ul.wb-explain-tooltip-list li ul li {
 .break-word {
   word-break: break-word;
 }
-/* need to be able to override parent style for warning icon */
 
+.wb-normal-results {
+  height: 100%;
+}
+
+/* need to be able to override parent style for warning icon */
 .force-orange-3 {
   color: #f9ca7b !important;
 }
